<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/list_background_pressed"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/pickCustomImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_view"
        android:scaleType="fitXY"
        android:src="@drawable/gallery_lakedistrict" />

    <!-- Ort -->

    <TextView
        android:id="@+id/placeNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/customImage_place"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <EditText
        android:id="@+id/placeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/counter_text_color"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    <!-- Beschreibung -->

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/customImage_description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/counter_text_color"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:inputType="textPersonName" />
    <!-- Datum -->

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/customImage_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="@color/counter_text_color"
            android:hint="@string/customImage_dateHint"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/datePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/ic_datum" />
    </LinearLayout>
    <!-- Save Button -->

    <Button
        android:id="@+id/saveImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/customImage_save"
        android:textColor="@color/counter_text_color" />

</LinearLayout>