<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/list_background_pressed"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/poimap"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

    <!-- Ort -->

    <TextView
        android:id="@+id/poiplaceNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/customImage_place"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <EditText
        android:id="@+id/poiplaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" >

        <requestFocus android:layout_height="match_parent" />
    </EditText>
    <!-- Beschreibung -->

    <TextView
        android:id="@+id/poidescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/customImage_description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <EditText
        android:id="@+id/poidescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <!-- Datum -->

    <TextView
        android:id="@+id/poidateLabelBeginning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/poi_dateBeginning"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/poidateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/customImage_dateHint"
            android:inputType="date"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/counter_text_color" />

        <ImageButton
            android:id="@+id/poidatePickerButtonBeginning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/ic_datum" />
    </LinearLayout>

    <TextView
        android:id="@+id/poidateLabelEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/poi_dateEnd"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/counter_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/poidateTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/customImage_dateHint"
            android:inputType="date"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/counter_text_color" />

        <ImageButton
            android:id="@+id/poidatePickerButtonEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/ic_datum" />
    </LinearLayout>
    <!-- Save Button -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/poiCancelPoiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/customImage_cancel"
            android:textColor="@color/counter_text_color" />

        <Button
            android:id="@+id/poiSavePoiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/customImage_save"
            android:textColor="@color/counter_text_color" />
    </LinearLayout>

</LinearLayout>